Fixed spacing in comments

--- a/client/src/pages/ClientDashboard/ClientDashboard.scss
+++ b/client/src/pages/ClientDashboard/ClientDashboard.scss
@@ -89,7 +89,6 @@
     .title {
       font-size: 25px;
       font-weight: 600;
-      margin-bottom: 30px;
     }
 
     .form {
@@ -141,7 +140,7 @@
       overflow-y: auto;
       max-height: 60vh;
       .comment {
-        margin-bottom: 30px;
+        margin-top: 15px;
         .user-profile {
           display: flex;
           img {
